--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 .env.test.local
 .env.production.local
 space-tourism-website-main
+space-tourism-website-figma
 
 npm-debug.log*
 yarn-debug.log*
