--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
+    "styled-components": "^5.3.3",
+    "svgo": "^2.8.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -42,7 +44,6 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.24",
-    "styled-components": "^5.3.3",
     "react-scripts": "^5.0.0"
   }
 }
