--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Based on Frontendmentor project, but in a React/TypeScript/Styled-Components environment.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.js --open",
+    "start": "webpack serve --mode development --config webpack/webpack.config.js --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,8 +21,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
-    "styled-components": "^5.3.3"
+    "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -32,11 +31,13 @@
     "@babel/preset-typescript": "^7.16.7",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "@types/styled-components": "^5.1.24",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.0",
     "html-webpack-plugin": "^5.5.0",
     "react-is": "^17.0.2",
     "style-loader": "^3.3.1",
+    "styled-components": "^5.3.3",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
