--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Based on Frontendmentor project, but in a React/TypeScript/Styled-Components environment.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development --config webpack/webpack.config.js --open",
+    "start": "webpack serve --mode development --config webpack/webpack.dev.js --open",
+    "build": "webpack --config webpack/webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
